assets/stylesheets/style.css
/* Stores all CSS variable */
:root {
    --light-green: #86d0d0;
    --green: #289699;
    --dark-green: #084c4c;
    --light-yellow: #fdf5a6;
    --yellow: #f7dc6a;
    --dark-yellow: #be952f;
    --light-orange: #f58e81;
    --orange: #ef6945;
    --dark-orange: #b73227;
    --light-red: #f289b7;
    --red: #ea204e;
    --dark-red: #b21e45;
    --light-purple: #cc5da3;
    --purple: #a9206a;
    --dark-purple: #741b56;
    --black: #252625;
    --dark-gray: #7f7f7f;
    --gray: #e0e1e0;
    --light-gray: #f0f0f0;
    --white: #ffffff;
}

/* ====== Boilerplate Styling ====== */

* {
    box-sizing: border-box;
}

body {
    font-family: 'Nexa', 'Gill Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 16px;
    margin: 0;
}

a, a:visited, a:hover {
	text-decoration: none;
}

textarea, input {
  transition: border .5s ease-in-out;
}

textarea:focus, input:focus {
	border-color: none;
}

textarea:focus, input:focus, button:focus, button {
    outline: blue;
}

button {
	border: none;
}

/* ====== Page Styling ====== */

header {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    width: 100vw;
    height: 100vh;
}
.header-video-overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background: var(--dark-green);
    opacity: 0.8;
}

#header-video {
    position: absolute;
    min-width: 100vw;
    min-height: 100vh;
}

.header-writing {
    z-index: 1;
}

.header-writing h1 {
    margin: 0;
    font-size: 3em;
    font-weight: 800;
    color: var(--white);
    text-align: center;
}

.header-writing p {
    color: var(--light-purple);
    font-size: 1.5em;
    font-weight: 500;
    text-align: center;
}

.scroll-arrow {
    position: absolute;
    bottom: 50px;
    height: 30px;
}

.main-content {
    width: 100vw;
    padding-bottom: 80px;
}

.viz-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px;
}

.viz-heading {
    display: inline-block;
    padding: 50px 0px;
    padding-bottom: 10px;
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-image: linear-gradient(to right, var(--green) 0%, var(--purple) 100%);
    border-image-slice: 1;
    font-size: 2em;
    font-weight: 700;
    text-align: center;
    margin-top: 30px;
}

.viz-explanation {
    max-width: 60ch;
    font-size: 1em;
    font-weight: 300;
    color: rgba(0, 0, 0, 0.87);
    line-height: 1.5em;
    margin-top: 50px;
}

.bold {
    font-weight: 500;
}

.italic {
    font-family: 'Nexa Italic', 'Gill Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-style: italic;
}

.instruction-block {
    max-width: 60ch;
    font-size: 1em;
    font-weight: 300;
    color: rgba(0, 0, 0, 0.87);
    line-height: 1.5em;
}

.instruction-heading {
    margin-bottom: 0px;
    text-align: center;
    color: var(--green);
}

.instruction-block ul {
    list-style-type: decimal;
    margin: 10px 0px;
    padding: 0;
}

.instruction-block ul li {
    font-size: 1em;
    font-weight: 300;
}

.data-source {
    max-width: 60ch;
    font-size: 0.7em;
    font-weight: 300;
    color: rgba(0, 0, 0, 0.87);
}

#viz1 {
    width: 70%;
    height: 75vh;
    border: 4px solid var(--purple);
    border-radius: 10px;
}

#viz2 {
    width: 70%;
    height: 75vh;
    border: 4px solid var(--purple);
    border-radius: 10px;
}

#viz3 {
    width: 70%;
    height: 75vh;
    border: 4px solid var(--purple);
    border-radius: 10px;
}

#viz4 {
    width: 70%;
    height: 75vh;
    border: 4px solid var(--purple);
    border-radius: 10px;
}

#viz5 {
    width: 70%;
    height: 75vh;
    border: 4px solid var(--purple);
    border-radius: 10px;
}

#viz6 {
    width: 70%;
    height: 75vh;
    border: 4px solid var(--purple);
    border-radius: 10px;
}

#viz7 {
    width: 70%;
    height: 75vh;
    border: 4px solid var(--purple);
    border-radius: 10px;
}

.axis path {
    fill: none;
    stroke: #7f7f7f;
    stroke-width: 2px;
    shape-rendering: crispEdges;
}

.axis line {
  fill: none;
  stroke: #7f7f7f;
  stroke-width: 1px;
  shape-rendering: crispEdges;
}

.label text {
    fill: var(--white);
    font-weight: 700;
}

.legend text {
    fill: var(--light-gray);
}

.legend rect {
    stroke: var(--light-gray);
    stroke-width: 1px;
}



/*========================================== */

.bounce {
    animation: bounce 3s infinite;
}

/* Animation */

@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-30px);
  }
  60% {
    transform: translateY(-15px);
  }
}

/*========================================== */

/* Fonts */

/*
	Tekuma's official Font is Nexa.
	This web application makes use of
	the entire Nexa Font Family, namely:

	- Nexa Black (800)
	- Nexa Heavy (700)
	- Nexa XBold (600)
	- Nexa Bold (500)
	- Nexa Nexa (400)
	- Nexa Book (300)
	- Nexa Light (200)
	- Nexa Thin (100)

	Each font weight has an accompanying Italic font.
	If you wish to italicize writing, use the font instead of the <i></i> tag.

	Similarly with bolding font, use a font with a thicker weight instead of the <b></b> tag.

*/

@font-face {
font-family: Nexa;
src: url(../fonts/nexa/Nexa-Black.ttf);
font-weight: 800;
}

@font-face {
font-family: Nexa;
src: url(../fonts/nexa/Nexa-Heavy.ttf);
font-weight: 700;
}

@font-face {
font-family: Nexa;
src: url(../fonts/nexa/Nexa-XBold.ttf);
font-weight: 600;
}

@font-face {
font-family: Nexa;
src: url(../fonts/nexa/Nexa-Bold.ttf);
font-weight: 500;
}

@font-face {
font-family: Nexa;
src: url(../fonts/nexa/Nexa.ttf);
font-weight: 400;
}

@font-face {
font-family: Nexa;
src: url(../fonts/nexa/Nexa-Book.ttf);
font-weight: 300;
}

@font-face {
font-family: Nexa;
src: url(../fonts/nexa/Nexa-Light.ttf);
font-weight: 200;
}

@font-face {
font-family: Nexa;
src: url(../fonts/nexa/Nexa-Thin.ttf);
font-weight: 100;
}

@font-face {
font-family: "Nexa Italic";
src: url(../fonts/nexa/Nexa-Black-Italic.ttf);
font-weight: 800;
}

@font-face {
font-family: "Nexa Italic";
src: url(../fonts/nexa/Nexa-Heavy-Italic.ttf);
font-weight: 700;
}

@font-face {
font-family: "Nexa Italic";
src: url(../fonts/nexa/Nexa-XBold-Italic.ttf);
font-weight: 600;
}

@font-face {
font-family: "Nexa Italic";
src: url(../fonts/nexa/Nexa-Bold-Italic.ttf);
font-weight: 500;
}

@font-face {
font-family: "Nexa Italic";
src: url(../fonts/nexa/Nexa.ttf);
font-weight: 400;
}

@font-face {
font-family: "Nexa Italic";
src: url(../fonts/nexa/Nexa-Book-Italic.ttf);
font-weight: 300;
}

@font-face {
font-family: "Nexa Italic";
src: url(../fonts/nexa/Nexa-Light-Italic.ttf);
font-weight: 200;
}

@font-face {
font-family: "Nexa Italic";
src: url(../fonts/nexa/Nexa-Thin-Italic.ttf);
font-weight: 100;
}

